Opdate to the contact style

--- a/app/pages/contact.html
+++ b/app/pages/contact.html
@@ -1,11 +1,9 @@
-<h1>Im a contactpage</h1>
-
 <div class="row">
       <div class="col-md-6 col-md-offset-3">
-        <div class="well well-sm medlem">
+        <div class="well well-sm">
           <form name="Cform" class="form-horizontal" ng-controller="FormController as formctlr"  ng-submit='Cform.$valid && formctlr.sendform()' novalidate>
           <fieldset>
-            <legend class="text-center medlemh1">Contact us</legend>
+            <legend class="text-center">Contact us</legend>
     
            
             <div class="form-group">
@@ -34,7 +32,7 @@
   
             <div class="form-group">
               <div class="col-md-12 text-right">
-                <button type="submit" class="btn btn-primary btn-lg btn-custom">Send</button>
+                <button type="submit" value="submit" class="btn btn-primary btn-lg btn-custom">Send</button>
               </div>
             </div>
           </fieldset>
@@ -44,5 +42,6 @@
         </div>
       </div>
 	</div>
+	<div class="row spaceout"></div>
 
 
