Opdate of contact form and detailpage

--- a/app/pages/productpage.html
+++ b/app/pages/productpage.html
@@ -60,8 +60,8 @@
         <div class="panel-body">
           <div class="row">
             <div class="col-md-3 col-sm-6 col-xs-12 products" ng-repeat="popular in storectlr.popularproducts">
-              <a href="#/productdetail/{{product.id}}" class="thumb"><img ng-src="{{popular.image}}"/></a>
-              <a href="#/productdetail/{{product.id}}"><h5>{{popular.name}}</h5></a>
+              <a href="#/productdetail/{{popular.id}}" class="thumb"><img ng-src="{{popular.image}}"/></a>
+              <a href="#/productdetail/{{popular.id}}"><h5>{{popular.name}}</h5></a>
               <h5>${{popular.price}}</h5>
             </div>
           </div> 
@@ -73,8 +73,8 @@
         <div class="panel-body">
           <div class="row">
             <div class="col-md-3 col-sm-6 col-xs-12 products" ng-repeat="popular in storectlr.popularproducts">
-              <a href="#/productdetail/{{product.id}}" class="thumb"><img ng-src="{{popular.image}}"/></a>
-              <a href="#/productdetail/{{product.id}}"><h5>{{popular.name}}</h5></a>
+              <a href="#/productdetail/{{popular.id}}" class="thumb"><img ng-src="{{popular.image}}"/></a>
+              <a href="#/productdetail/{{popular.id}}"><h5>{{popular.name}}</h5></a>
               <h5>${{popular.price}}</h5>
             </div>
           </div> 
