--- a/app/pages/productdetail.html
+++ b/app/pages/productdetail.html
@@ -1,6 +1,10 @@
+<!--<div data-ng-controller="DetailCtrl as detailcontroller">	
+  <span>{{productId}}</span>
+  <h1>{{product.name}}</h1>
+  <p>{{product.price}}</p>
+</div>-->
+<h2>Citizen Eco-Drive</h2>
+<h3>Mens Watch</h3>
+<img src="images/ur.png" class="img-ur" alt="ur"/>
+<div class="spacing"></div>
 
-
-<h1>{{product.name}}</h1>
-<p>{{product.price}}</p>
-
-<h1>Hej</h1>
