--- a/app/index.html
+++ b/app/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html class="no-js" lang="" ng-app="store">
+<html class="no-js" lang="" data-ng-app="store">
   <head>
     <meta charset="utf-8">
     <meta name="description" content="">
@@ -26,7 +26,7 @@
     <!--[if lt IE 10]>
       <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
-   <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">  
+   <nav class="navbar navbar-inverse navbar-fixed-top">  
       <div class="container">
         <div class="navbar-header">
               <div class="navbar-header"><a class="navbar-brand" href="#/home">Sell<span id="brand-narrow">Jee</span></a></div>
@@ -75,7 +75,7 @@
       </div>
     </nav>
 
-    <nav class="navbar navbar-inverse navbar-static-top" role="navigation">
+    <nav class="navbar navbar-inverse navbar-static-top">
       <div class="container"> 
         <div class="navbar-header">
           <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
@@ -109,9 +109,9 @@
     </nav>
   
     <div class="container">
-      <div ng-view></div>
+      <div data-ng-view></div>
     </div>
-
+      <div class="sub"></div>
       <footer class="footer">
          <div class="container">
            <div class="row">
