--- a/app/pages/productpage.html
+++ b/app/pages/productpage.html
@@ -9,7 +9,7 @@
         <!-- Wrapper for slides -->
         <div class="carousel-inner">
           <div class="item active">
-            <img src="images/slide1.png" alt="first slide">
+            <img src="images/slide1.png" alt="first slide"/>
             <div class="carousel-caption">
               <p><a class="ship" href="#">FREE SHIPPING</a></p>
               <h3>A New Beautiful Summer Look</h3>
@@ -17,7 +17,7 @@
             </div>
           </div>
           <div class="item">
-            <img src="images/slide2.png" alt="second slide">
+            <img src="images/slide2.png" alt="second slide"/>
             <div class="carousel-caption">
               <p><a class="ship" href="#">FREE SHIPPING</a></p>
               <h3>Great New Things For The Summer Time</h3>
@@ -25,7 +25,7 @@
             </div>
           </div>
           <div class="item">
-            <img src="images/slide3.png" alt="second slide">
+            <img src="images/slide3.png" alt="second slide"/>
             <div class="carousel-caption">
               <p><a class="ship" href="#">FREE SHIPPING</a></p>
               <h3>All That You Need, Right Here</h3>
@@ -42,40 +42,53 @@
         </a>
       </div> <!-- Carousel -->
 
-      <div class="panel panel-default firstpan" ng-controller="StoreController as storectlr">
+      <div class="panel panel-default firstpan" data-ng-controller="StoreController as storectlr">
         <div class="panel-heading">Daily Deals</div>
         <div class="panel-body">
           <div class="row">
-          	<div class="col-md-3 col-sm-6 col-xs-12 products" ng-repeat="product in storectlr.products">
-              <a href="#/productdetail/{{product.id}}" class="thumb"><img ng-src="{{product.image}}"/></a>
-			  <a href="#/productdetail/{{product.id}}"><h5>{{product.name}}</h5></a>
-              <h5>${{product.price}}</h5>
+          	<div class="col-md-3 col-sm-6 col-xs-12 products" data-ng-repeat="product in storectlr.products">
+              <p class="ship">27% OFF</p>
+              <a href="#/productdetail/{{product.id}}" class="thumb"><img class="proimg" data-ng-src="{{product.image}}" alt="product image"/></a>
+			        <a href="#/productdetail/{{product.id}}"><h5>{{product.name}}</h5><h5>{{product.description}}</h5></a>
+              <h6><span>${{product.beforeprice}} </span>${{product.price}}</h6>
             </div>
           </div> 
         </div>
       </div>
 
-      <div class="panel panel-default firstpan" ng-controller="StoreController as storectlr">
+      <div class="panel panel-default firstpan" data-ng-controller="StoreController as storectlr">
         <div class="panel-heading">Popular Products </div>
         <div class="panel-body">
           <div class="row">
-            <div class="col-md-3 col-sm-6 col-xs-12 products" ng-repeat="popular in storectlr.popularproducts">
-              <a href="#/productdetail/{{popular.id}}" class="thumb"><img ng-src="{{popular.image}}"/></a>
-              <a href="#/productdetail/{{popular.id}}"><h5>{{popular.name}}</h5></a>
-              <h5>${{popular.price}}</h5>
+            <div class="col-md-3 col-sm-6 col-xs-12 products" data-ng-repeat="popular in storectlr.popularproducts">
+              <a href="#/productdetail/{{popular.id}}" class="thumb"><img class="popimg" data-ng-src="{{popular.image}}" alt="product image"/></a>
+              <a href="#/productdetail/{{popular.id}}"><h5 class="proname">{{popular.name}}</h5></a>
+              <h6><span>${{popular.beforeprice}} </span>${{popular.price}}</h6>
             </div>
           </div> 
         </div>
       </div>
 
-       <div class="panel panel-default firstpan" ng-controller="StoreController as storectlr">
+       <div class="panel panel-default firstpan" data-ng-controller="StoreController as storectlr">
         <div class="panel-heading">Electronics </div>
         <div class="panel-body">
           <div class="row">
-            <div class="col-md-3 col-sm-6 col-xs-12 products" ng-repeat="popular in storectlr.popularproducts">
-              <a href="#/productdetail/{{popular.id}}" class="thumb"><img ng-src="{{popular.image}}"/></a>
-              <a href="#/productdetail/{{popular.id}}"><h5>{{popular.name}}</h5></a>
-              <h5>${{popular.price}}</h5>
+            <div class="col-md-6 col-sm-12 col-xs-12 electronback">
+              <p><a id="og" class="ship" href="#">FREE SHIPPING</a></p>
+              <h3>Microsoft Surface 2 RT<br> 
+                10.6" 32GB Multi-Touch<br> 
+                Windows Wi-Fi Tablet</h3>
+              <div class="btn-group">
+                <button type="button" class="btn btn-primary btn-buy">$449.95</button>
+                <button type="button" class="btn btn-primary btn-buynow">BUY NOW</button>
+              </div>
+            </div>
+            <div class="col-md-6 col-sm-12 col-xs-12">
+              <div class="col-md-6 col-sm-6 col-xs-12 smallproducts" data-ng-repeat="electronics in storectlr.electronproducts">
+                <a href="#/productdetail/{{electronics.id}}" class="thumb"><img class="pull-left img-small" data-ng-src="{{electronics.image}}" alt="product image"/></a>
+                <a href="#/productdetail/{{electronics.id}}"><h5>{{electronics.name}}</h5></a>
+                <h6>${{electronics.price}}</h6>
+              </div>
             </div>
           </div> 
         </div>
